--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=essalud-backend
 
-spring.datasource.url=jdbc:mysql://localhost:3306/DB_ESSALUD_RESERVA_DE_CITAS_MEDICAS?serverTimezone=UTC
+spring.datasource.url=${DB_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Monopolio26
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -11,3 +11,5 @@ spring.jpa.show-sql=true
 
 spring.security.user.name=admin
 spring.security.user.password=admin123
+
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
