--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=essalud-backend
 
-spring.datasource.url=${DB_URL}
+spring.datasource.url=jdbc:mysql://localhost:3306/db_essalud_reserva_de_citas_medicas?serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -12,4 +12,4 @@ spring.jpa.show-sql=true
 spring.security.user.name=admin
 spring.security.user.password=admin123
 
-app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
+app.cors.allowed-origins=http://localhost:3000
